Comparisone remove button, Cart animation

--- a/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
@@ -21,7 +21,7 @@
             }
             else
             {
-                <img src="~/st/r/Entry_2.png"
+                <img src="~/st/v/alert.svg"
                      width="92" height="92" alt=""
                      id="imgPfp" />
             }
