--- a/GhasreMobile/Areas/User/Views/Profile/_OrderStatus.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/_OrderStatus.cshtml
@@ -17,7 +17,7 @@
                     <span class="name">در حال انتقال</span>
                 </div>
                 <div class="line @((item.Status == 0) ? "" : (item.Status == 1) ? "" : (item.Status == 2) ? "done" : "")"></div>
-                <div class="step @((item.Status == 0) ? "" : (item.Status == 1) ? "" : (item.Status == 2) ? "doing" : "done")">
+                <div class="step @((item.Status == 0) ? "" : (item.Status == 1) ? "" : (item.Status == 2) ? "done" : "done")">
                     <div class="circle"></div>
                     <span class="name">تحویل داده شد</span>
                 </div>
