--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -139,6 +139,95 @@ backdrop-filter: saturate(80%);
     content: '★';
     color: #fc0; }
 
+/*Star*/
+/*#region Material  */
+/*#endregion */
+/*
+backdrop-filter: blur(2px);
+backdrop-filter: brightness(60%);
+backdrop-filter: contrast(40%);
+backdrop-filter: drop-shadow(4px 4px 10px blue);
+backdrop-filter: grayscale(30%);
+backdrop-filter: hue-rotate(120deg);
+backdrop-filter: invert(70%);
+backdrop-filter: opacity(20%);
+backdrop-filter: sepia(90%);
+backdrop-filter: saturate(80%);
+*/
+/*#endregion */
+/*#region Alignment */
+.row {
+  display: flex;
+  flex-direction: row; }
+
+.rowr {
+  display: flex;
+  flex-direction: row-reverse; }
+
+.col {
+  display: flex;
+  flex-direction: column; }
+
+.colr {
+  display: flex;
+  flex-direction: column-reverse; }
+
+.flex-1 {
+  flex: 1; }
+
+.flex-2 {
+  flex: 2; }
+
+.flex-3 {
+  flex: 3; }
+
+.flex-4 {
+  flex: 4; }
+
+.flex-5 {
+  flex: 5; }
+
+.flex-6 {
+  flex: 6; }
+
+.flex-7 {
+  flex: 7; }
+
+.flex-8 {
+  flex: 8; }
+
+.flex-9 {
+  flex: 9; }
+
+.flex-10 {
+  flex: 10; }
+
+.flex-11 {
+  flex: 11; }
+
+.flex-auto {
+  flex: auto; }
+
+/*#endregion */
+.anim-add-to-cart {
+  animation-name: anim-add-to-cart;
+  animation-iteration-count: 1;
+  animation-duration: .3s; }
+
+@keyframes anim-add-to-cart {
+  0% {
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+  32% {
+    -moz-box-shadow: 0 0 0 12px rgba(150, 2, 126, 0.2);
+    -webkit-box-shadow: 0 0 0 12px rgba(150, 2, 126, 0.2);
+    box-shadow: 0 0 0 12px rgba(150, 2, 126, 0.2); }
+  100% {
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none; } }
+
 button, .btn, a, a:hover .js-upload, input[type=file] {
   cursor: pointer;
   outline: none;
@@ -1294,6 +1383,9 @@ textarea {
       padding: 8px; } }
   .product-express .body > a {
     display: flex; }
+    .product-express .body > a img {
+      margin: auto;
+      max-height: 264px; }
   .product-express .body .star {
     position: absolute;
     left: 12px;
@@ -1461,7 +1553,8 @@ textarea {
     -o-object-position: center;
     object-position: center;
     width: 100%;
-    height: auto; }
+    height: auto;
+    max-height: 264px; }
 
 .blog-block img {
   -o-object-fit: cover;
