--- a/GhasreMobile/Areas/User/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Index.cshtml
@@ -35,7 +35,7 @@
                     {
                         <tr>
                             <td>
-                                <a href="/Product/@j.ProductId/@j.Product.Name.Replace(" ","-")" class="link-text">@j.Product.Name</a>
+                                <a href="/Product/@j.ProductId/@j.Product.Name.Replace(" ","-")" class="link-text" target="_blank">@j.Product.Name</a>
                             </td>
                             <td>@j.Count</td>
                             <td>@j.Color.Name</td>
