--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -23,7 +23,7 @@
                     <td class="name">
                         <div class="col">
                             <h5>@item.Name</h5>
-                            <a class="link-text" href="/Product/@item.ProductID/@item.Name.Replace(" ","-")">@item.Brand</a>
+                            <a class="link-text" href="/Product/@item.ProductID/@item.Name.Replace(" ","-")"  target="_blank">@item.Brand</a>
                         </div>
                     </td>
                     <td class="name">
