--- a/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
@@ -25,7 +25,7 @@
         </ul>
     </div>
     <div class="body">
-        <a href="/Product/@Model.ProductId/@Model.Product.Name.Replace(" ","-")">
+        <a href="/Product/@Model.ProductId/@Model.Product.Name.Replace(" ","-")"  target="_blank" >
             <img src="~/Images/ProductMain/@Model.Product.MainImage" alt="" />
         </a>
         <div class="star">
@@ -48,7 +48,7 @@
                 }
             }
         </ul>
-        <a href="/Product/@Model.ProductId/@Model.Product.Name.Replace(" ","-")" class="link-text">
+        <a href="/Product/@Model.ProductId/@Model.Product.Name.Replace(" ","-")" class="link-text"  target="_blank" >
             <h3 class="name" dir="rtl">
                 @Model.Product.Name
             </h3>
