--- a/GhasreMobile/Views/Shared/_Comparison.cshtml
+++ b/GhasreMobile/Views/Shared/_Comparison.cshtml
@@ -12,7 +12,7 @@
                             <button onclick="window.location.href = '/ShopCart/DeleteFromCompare/@item.ProductID?ReturnUrl=' + window.location.href" class="remove uk-position-absolute btn-icon uk-border-rounded"
                                     uk-icon="trash"
                                     uk-tooltip="حذف از لیست مقایسه"></button>
-                            <a href="/Product/@item.ProductID/@item.Name.Replace("/", "").Replace(" ", "-")">
+                            <a href="/Product/@item.ProductID/@item.Name.Replace("/", "").Replace(" ", "-")"  target="_blank">
                                 <img src="~/Images/ProductMain/@item.ImageName" alt="" />
                                 <h5>@item.Name</h5>
                                 @if (item.SumProduct > 0)
